@@ -1,5 +1,12 @@
 2007-02-14  Dalibor Topic  <robilad@kaffe.org>
 
+	* dostime.c (dos2unixtime): Added casts to int.
+	(unix2dostime) Added casts to ub4.
+	* dostime.h (dos2unixtime, unix2dostime): Changed
+	prototypes to use ub4 instead of unsigned long.
+
+2007-02-14  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (extract_jar): Changed rdamt to size_t.
 	* pushback.c (pb_push): Changed in_amt, wrap to size_t.
 	Added a size_t cast, and removed an int cast. 
